Arrumando a quebra de padrão durante a mensagem de erro, e recuperando a função de limpar os valores durante troca de bases.

--- a/Conversor.html
+++ b/Conversor.html
@@ -29,7 +29,7 @@
                 <input onkeyup="converterDecimal()" class="input_valor" id="input_valorDecimal" type="number"
                     placeholder="Digite o valor em decimal">
                 <br>
-                <div class="container3" id="resultado_erro_decimal"></div>
+                <div class="erro" id="resultado_erro_decimal"></div>
                 <div class="container3">
                     <h3>Octal:</h3>
                     <div class="apagar" id="decimal_octal"></div>
@@ -54,7 +54,7 @@
                     placeholder="Digite o valor em binário">
                 <br>
 
-                <div class="container3" id="resultado_erro_binario"></div>
+                <div class="erro" id="resultado_erro_binario"></div>
 
                 <div class="container3">
                     <h3>Decimal:</h3>
@@ -78,7 +78,7 @@
                 <input onkeyup="converterOctal()" class="input_valor" id="input_valorOctal" type="number"
                     placeholder="Digite o valor em octal">
                 <br>
-                <div class="container3" id="resultado_erro_octal"></div>
+                <div class="erro" id="resultado_erro_octal"></div>
                 <div class="container3">
                     <h3>Decimal:</h3>
                     <div class="apagar" id="octal_decimal"></div>
@@ -101,7 +101,7 @@
                 <input onkeyup="converterHexadecimal()" class="input_valor" id="input_valorHexadecimal" type="text"
                     placeholder="Digite o valor em Hexadecimal">
                 <br>
-                <div class="container3" id="resultado_erro_hexadecimal"></div>
+                <div class="erro" id="resultado_erro_hexadecimal"></div>
                 <div class="container3">
                     <h3>Decimal:</h3>
                     <div class="apagar" id="hexadecimal_decimal"></div>
